swagger updated. better error messages for memory endpoints. response directory names changed for better handling in bugfixed for tests
